added camera feed to controller

--- a/server/templates/controller.html
+++ b/server/templates/controller.html
@@ -24,6 +24,7 @@
                     <div class='col-6' >
                         <!-- cam -->
                         <div id='cam-wrapper'>
+                            <iframe style="height:100%; width:100%;" src='http://192.168.2.41:5001/index.html'></iframe>
                         </div>
                     </div>
                     <div class='col-2'>
